# marion

./: .dockerignore  .gitignore  .gitlint  404.html  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  renovate.json  sitemap.xml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
CHANGELOG/: index.html
LICENSE/: index.html
contribute/: index.html
docker/files/usr/local/etc/gunicorn/: marion.py
docs/: contribute.md  index.md  install.md  issuer.md  settings.md
docs/sources/: issuer.md  model.md
env.d/development/: common  postgresql
install/: index.html
issuer/: index.html
issuer-reference/: index.html
sandbox/: asgi.py  manage.py  pylint_init_hook.py  settings.py  wsgi.py
sandbox/urls/: __init__.py  debug.py
search/: search_index.json
settings/: index.html
sources/issuer/: index.html
sources/model/: index.html
src/howard/: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
src/howard/howard/: __init__.py  defaults.py  utils.py
src/howard/howard/issuers/: __init__.py  certificate.py  invoice.py  realisation.py  realization.py
src/howard/howard/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
src/howard/howard/templates/howard/: certificate.html  invoice.css  invoice.html  realisation.html
src/howard/howard/templates/marion/certificates/: realisation.css  realisation.html  realization.html
src/howard/howard/templates/marion/documents/: realisation.html
src/howard/howard/templatetags/: howard_tags.py
src/howard/howard/tests/issuers/: test_certificate.py  test_invoice.py  test_realisation.py
src/howard/howard/tests/templatetags/: test_howard_tags.py
src/howard/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
src/marion/: .pylintrc  MANIFEST.in  manage.py  setup.cfg  setup.py
src/marion/marion/: __init__.py  admin.py  apps.py  asgi.py  defaults.py  exceptions.py  factories.py  fields.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/marion/marion/certificates/: admin.py  apps.py  defaults.py  exceptions.py  factories.py  models.py  serializers.py  urls.py  utils.py  views.py
src/marion/marion/certificates/issuers/: __init__.py  base.py  dummy.py
src/marion/marion/certificates/migrations/: 0001_initial.py  0002_auto_20200910_1453.py
src/marion/marion/certificates/templates/marion/certificates/: dummy.css  dummy.html
src/marion/marion/certificates/tests/: test_defaults.py  test_models.py  test_serializers.py  test_utils.py  test_views.py
src/marion/marion/certificates/tests/issuers/: test_base.py
src/marion/marion/certificates/urls/: __init__.py  debug.py
src/marion/marion/documents/: admin.py  apps.py  defaults.py  exceptions.py  factories.py  models.py  serializers.py  utils.py  views.py
src/marion/marion/documents/issuers/: __init__.py  base.py  dummy.py
src/marion/marion/documents/migrations/: 0001_initial.py  0002_auto_20200910_1453.py
src/marion/marion/documents/templates/marion/documents/: dummy.css  dummy.html
src/marion/marion/documents/tests/: test_defaults.py  test_models.py  test_serializers.py  test_utils.py  test_views.py
src/marion/marion/documents/tests/issuers/: test_base.py
src/marion/marion/documents/urls/: __init__.py  debug.py
src/marion/marion/issuers/: __init__.py  base.py  dummy.py
src/marion/marion/migrations/: 0001_initial.py  0002_alter_documentrequest_issuer.py  0002_auto_20210629_0125.py
src/marion/marion/tests/: test_defaults.py  test_fields.py  test_models.py  test_serializers.py  test_utils.py  test_views.py
src/marion/marion/tests/issuers/: test_base.py
src/marion/marion/urls/: __init__.py  debug.py
