[metadata]
name = django-marion-howard
version = 0.2.7
description = FUN documents for Marion, the documents factory
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/marion
license = MIT
keywords = Django, LMS, learning, PDF
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
  django-marion>=0.3.0
packages = find:
zip_safe = True

[bdist_wheel]
universal = 1
