[metadata]
name = django-marion
version = 0.6.0
description = The documents factory
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://openfun.github.io/marion/
license = MIT
keywords = Django, LMS, learning, PDF
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
install_requires =
    arrow>=1.0.0
    djangorestframework>=3.12.0
    pydantic>=2.2.0
    WeasyPrint>=59.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.5
    black==23.11.0
    factory_boy==3.3.0
    flake8==6.1.0
    hypothesis[django]==6.91.0
    isort==5.12.0
    Jinja2==3.1.2
    mkdocs==1.5.3
    mkdocs-material==9.4.14
    mkdocstrings==0.24.0
    pdfminer.six==20221105
    pyfakefs==5.3.2
    pylint<3,>=2.0
    pylint-django==2.5.5
    pytest==7.4.3
    pytest-cov==4.1.0
    pytest-django==4.7.0
sandbox =
    Django<5
    django-configurations==2.5
    psycopg2-binary==2.9.9
ci =
    twine==4.0.2

[bdist_wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[isort]
known_django = django
known_marion = marion
include_trailing_comma = True
line_length = 88
multi_line_output = 3
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,MARION,FIRSTPARTY,LOCALFOLDER
skip_glob = venv

[tool:pytest]
addopts = -v --cov-report term-missing --cov-config=.coveragerc --cov=marion --hypothesis-show-statistics
python_files =
    test_*.py
    tests.py
testpaths =
    marion
